--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,9 @@ rat {
     "website/src/_sass/bootstrap/**/*",
     "website/src/js/bootstrap*.js",
     "website/src/js/bootstrap/**/*",
+
+    // Ignore ownership files
+    "ownership/**/*",
   ]
 
   // Add .gitignore excludes to the Apache Rat exclusion list. We re-create the behavior
@@ -167,6 +170,7 @@ task javaPreCommit() {
   dependsOn ":beam-sdks-java-core:buildDependents"
   dependsOn ":beam-examples-java:preCommit"
   dependsOn ":beam-sdks-java-extensions-sql-jdbc:preCommit"
+  dependsOn ":beam-sdks-java-javadoc:allJavadoc"
 }
 
 task javaPostCommit() {
