--- a/release/build.gradle
+++ b/release/build.gradle
@@ -23,7 +23,7 @@ repositories {
 }
 
 dependencies {
-  compile 'org.codehaus.groovy:groovy-all:2.4.13'
+  compile 'org.codehaus.groovy:groovy-all:3.0.0-alpha-3'
   compile 'commons-cli:commons-cli:1.2'
 }
 
