--- a/settings.gradle
+++ b/settings.gradle
@@ -148,6 +148,8 @@ include "beam-sdks-java-io-parquet"
 project(":beam-sdks-java-io-parquet").dir = file("sdks/java/io/parquet")
 include "beam-sdks-java-io-redis"
 project(":beam-sdks-java-io-redis").dir = file("sdks/java/io/redis")
+include "beam-sdks-java-io-sns"
+project(":beam-sdks-java-io-sns").dir = file("sdks/java/io/sns")
 include "beam-sdks-java-io-solr"
 project(":beam-sdks-java-io-solr").dir = file("sdks/java/io/solr")
 include "beam-sdks-java-io-tika"
