--- a/runners/spark/build.gradle
+++ b/runners/spark/build.gradle
@@ -122,6 +122,8 @@ task validatesRunnerBatch(type: Test) {
   useJUnit {
     includeCategories 'org.apache.beam.sdk.testing.ValidatesRunner'
     includeCategories 'org.apache.beam.runners.spark.UsesCheckpointRecovery'
+    // TODO: support @RequiresStableInput then remove the next line
+    excludeCategories "org.apache.beam.sdk.testing.RetryFailures"
     excludeCategories 'org.apache.beam.sdk.testing.UsesAttemptedMetrics'
     excludeCategories 'org.apache.beam.sdk.testing.UsesCommittedMetrics'
     excludeCategories 'org.apache.beam.sdk.testing.UsesTestStream'
