--- a/runners/gearpump/build.gradle
+++ b/runners/gearpump/build.gradle
@@ -71,6 +71,8 @@ task validatesRunnerStreaming(type: Test) {
   testClassesDirs = files(project(":beam-sdks-java-core").sourceSets.test.output.classesDirs)
   useJUnit {
     includeCategories 'org.apache.beam.sdk.testing.ValidatesRunner'
+    // TODO: support @RequiresStableInput then remove the next line
+    excludeCategories "org.apache.beam.sdk.testing.RetryFailures"
     excludeCategories 'org.apache.beam.sdk.testing.FlattenWithHeterogeneousCoders'
     excludeCategories 'org.apache.beam.sdk.testing.UsesSchema'
     excludeCategories 'org.apache.beam.sdk.testing.UsesStatefulParDo'
