--- a/sdks/java/io/google-cloud-platform/build.gradle
+++ b/sdks/java/io/google-cloud-platform/build.gradle
@@ -76,6 +76,7 @@ dependencies {
   shadowTest library.java.hamcrest_library
   shadowTest library.java.mockito_core
   shadowTest library.java.junit
+  shadowTest library.java.powermock
   shadowTest library.java.slf4j_jdk14
 }
 
