--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -17,7 +17,8 @@
 
 [tox]
 # new environments will be excluded by default unless explicitly added to envlist.
-envlist = py27,py3,py27-{gcp,cython,lint,lint3},py3-lint,docs
+;envlist = py27,py3,py27-{gcp,cython,lint,lint3},py3-lint,docs
+envlist = py3
 toxworkdir = {toxinidir}/target/.tox
 
 [pycodestyle]
@@ -55,12 +56,15 @@ commands =
 
 [testenv:py3]
 setenv =
-    BEAM_EXPERIMENTAL_PY3=1
+  BEAM_EXPERIMENTAL_PY3=1
+modules =
+  --tests apache_beam/coders
+  --tests apache_beam/tools
 commands =
   python --version
   pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
-  python setup.py nosetests --tests apache_beam.runners.direct.direct_metrics_test:DirectMetricsTest.test_combiner_functions
+  python setup.py nosetests {[testenv:py3]modules}
   {toxinidir}/scripts/run_tox_cleanup.sh
 
 [testenv:py27-cython]
