--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -35,7 +35,8 @@ task setupVirtualenv {
     }
     exec {
       executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && pip install --upgrade tox==3.0.0 grpcio-tools==1.3.5"
+      args '-c', ". ${envdir}/bin/activate && pip install --upgrade tox==3.0.0
+      grpcio-tools==1.3.5 future==0.16.0"
     }
   }
   // Gradle will delete outputs whenever it thinks they are stale. Putting a
