--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -303,12 +303,10 @@ def flinkCompatibilityMatrix = {
   def name = 'flinkCompatibilityMatrix' + type
   tasks.create(name: name) {
     dependsOn 'setupVirtualenv'
-    dependsOn ':beam-sdks-python-container:docker'
-    dependsOn ':beam-runners-flink_2.11-job-server:jar'
     doLast {
       exec {
         executable 'sh'
-        args '-c', ". ${envdir}/bin/activate && pip install -e . && python -m apache_beam.runners.portability.flink_runner_test ${project(":beam-runners-flink_2.11-job-server:").shadowJar.archivePath} ${type}"
+        args '-c', ". ${envdir}/bin/activate && pip install -e ."
       }
     }
   }
