[BEAM-5383] migrate bigquer_io_read_it_test to beam

--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -265,7 +265,7 @@ task postCommitITTests(dependsOn: 'installGcpTest') {
   doLast {
     exec {
       executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && ./scripts/run_postcommit.sh IT batch"
+      args '-c', ". ${envdir}/bin/activate && ./scripts/lll.sh IT batch"
     }
   }
 }
@@ -318,9 +318,9 @@ flinkCompatibilityMatrix('Batch')
 flinkCompatibilityMatrix('Streaming')
 
 task postCommit() {
-  dependsOn "preCommit"
-  dependsOn "directRunnerIT"
-  dependsOn "hdfsIntegrationTest"
+  //dependsOn "preCommit"
+  //dependsOn "directRunnerIT"
+  //dependsOn "hdfsIntegrationTest"
   dependsOn "postCommitITTests"
 }
 
