--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -318,9 +318,9 @@ flinkCompatibilityMatrix('Batch')
 flinkCompatibilityMatrix('Streaming')
 
 task postCommit() {
-  dependsOn "preCommit"
-  dependsOn "directRunnerIT"
-  dependsOn "hdfsIntegrationTest"
+  //dependsOn "preCommit"
+  //dependsOn "directRunnerIT"
+  //dependsOn "hdfsIntegrationTest"
   dependsOn "postCommitITTests"
 }
 
