Add big_query_query_to_table_it to python SDK

--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -193,7 +193,7 @@ task installGcpTest(dependsOn: 'setupVirtualenv') {
   doLast {
     exec {
       executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && pip install -e .[gcp,test]"
+      args '-c', ". ${envdir}/bin/activate && pip install -e .[gcp,test] && pip install --upgrade google-cloud-bigquery"
     }
   }
 }
